chore(rest): rework exceptions
1. Replace TException with SW360Exception wherever possible.
2. Add missing exception handlers to RestExceptionHandler.
3. Throw exception instead of returning error response to keep response
   format consistent.

Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>